# libcc2540

./: .gitignore  Makefile.am  README.md  configure.ac  libcc2540.pc.in
doc/: Makefile.am  asciidoc.conf  cc2540_close.txt  cc2540_get_timeout.txt  cc2540_open.txt  cc2540_read.txt  cc2540_set_timeout.txt  cc2540_write.txt  gap_cmd.txt  gap_cmd_adv_set.txt  gap_cmd_auth.txt  gap_cmd_dev_addr_set.txt  gap_cmd_dev_disc.txt  gap_cmd_dev_disc_end.txt  gap_cmd_dev_init.txt  gap_cmd_disc_end.txt  gap_cmd_disc_set.txt  gap_cmd_link_end.txt  gap_cmd_link_set.txt  gap_cmd_link_update.txt  gap_cmd_param_get.txt  gap_cmd_param_set.txt  gap_cmd_pass_update.txt  gap_cmd_slave_sec.txt  gap_evt_dev_init_done.txt  hci_cmd.txt  hci_evt.txt  hci_strerror.txt  print_gap_evt_adv_set_done.txt  print_gap_evt_auth.txt  print_gap_evt_cmd_status.txt  print_gap_evt_dev_disc.txt  print_gap_evt_dev_info.txt  print_gap_evt_dev_init_done.txt  print_gap_evt_disc_set_done.txt  print_gap_evt_link_end.txt  print_gap_evt_link_set.txt  print_gap_evt_link_update.txt  print_hci_evt.txt  print_hci_evt_info.txt
src/: Makefile.am  cc2540-cmd-private.h  cc2540-cmd.c  cc2540-cmd.h  cc2540-error.h  cc2540-print.c  cc2540-print.h  cc2540-private.h  cc2540.c  cc2540.h  libcc2540.sym
test/: Makefile.am  test-cc2540.c  test-common.c  test-common.h  test-device.sh  test-gap-adv-set.c  test-gap-auth.c  test-gap-dev-addr-set.c  test-gap-dev-disc-end.c  test-gap-dev-disc.c  test-gap-dev-init.c  test-gap-disc-set.c  test-gap-link-set.c  test-gap-link-update.c  test-gap-param-get.c  test-gap-param-set.c  test-gap-pass-update.c
